After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 777280 - Fix various bugs detected by Coverity
Fix various bugs detected by Coverity
Status: RESOLVED FIXED
Product: gedit-plugins
Classification: Other
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2017-01-15 16:57 UTC by Garrett Regier
Modified: 2019-03-23 20:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
time: fix gtk_tree_model_get_iter_first() usage (963 bytes, patch)
2017-01-15 16:57 UTC, Garrett Regier
committed Details | Review
filebrowser: gtk_tree_model_get_iter() (2.88 KB, patch)
2017-01-15 16:57 UTC, Garrett Regier
committed Details | Review
filebrowser: fix potential use after free (1.14 KB, patch)
2017-01-15 16:57 UTC, Garrett Regier
committed Details | Review
open document selector: fix gtk_tree_model_get_iter_first() usage (1.22 KB, patch)
2017-01-20 04:51 UTC, Garrett Regier
committed Details | Review

Description Garrett Regier 2017-01-15 16:57:02 UTC
Created attachment 343503 [details] [review]
time: fix gtk_tree_model_get_iter_first() usage

These bugs were found by Coverity and are just a quick fix.
Comment 1 Garrett Regier 2017-01-15 16:57:23 UTC
Created attachment 343504 [details] [review]
filebrowser: gtk_tree_model_get_iter()
Comment 2 Garrett Regier 2017-01-15 16:57:39 UTC
Created attachment 343505 [details] [review]
filebrowser: fix potential use after free
Comment 3 Paolo Borelli 2017-01-17 17:43:05 UTC
Review of attachment 343503 [details] [review]:

Sure
Comment 4 Paolo Borelli 2017-01-17 17:44:23 UTC
Review of attachment 343504 [details] [review]:

Looks good
Comment 5 Paolo Borelli 2017-01-17 17:46:46 UTC
Review of attachment 343505 [details] [review]:

Oops, I wonder how this did not byte us badly
Comment 6 Garrett Regier 2017-01-20 04:51:40 UTC
Created attachment 343856 [details] [review]
open document selector: fix gtk_tree_model_get_iter_first() usage
Comment 7 Ken VanDine 2017-12-04 21:59:26 UTC
Review of attachment 343856 [details] [review]:

This looks sensible to me, can we please get it merged as well?
Comment 8 Jeremy Bicha 2018-01-28 23:13:17 UTC
Attachment 343856 [details] pushed as 599ab55 - open document selector: fix gtk_tree_model_get_iter_first() usage