open document selector: fix gtk_tree_model_get_iter_first() usage

https://bugzilla.gnome.org/show_bug.cgi?id=777280